examples/spring-cloud-grayscale-with-eureka/gateway/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springcloud-gateway
spec:
  selector:
    app: springcloud-gateway
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
